# phoenix

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Cargo.toml.bak  LICENSE  Makefile  Makefile.toml  README.md  a.sh  api.txt  b.sh  build.sh  compatibility.txt  engine-api.txt  koala-2.toml  koala.toml  makefile.toml  phoenix.toml  relocation.rs  runtime.rs  runtime2.rs  runtime3.rs  rust-toolchain  todo.txt
benchmark/: Cargo.toml  README.md  config.toml
benchmark/benchmark/: alltoall-3w-1mb.toml  rpc_bench.toml  rpc_bench_plus.toml  rpc_echo.toml  rpc_hello.toml  send_bw-64kb.toml  write_bw-1mb.toml  write_bw-4kb.toml  write_bw-64kb.toml  write_lat-32b.toml  write_thpt-32b-8p.toml  write_thpt-32b.toml
benchmark/benchmark/hotel_reservation/: hotel_reservation.toml
benchmark/benchmark/masstree_analytics/: workload_1.toml  workload_2.toml  workload_mp.toml
benchmark/benchmark/parameter_server/: efficient_net.toml  inception_v3.toml  mobile_net.toml
benchmark/benchmark/rpc_bench/: rpc_bench_tput_128b.toml  rpc_bench_tput_128kb.toml  rpc_bench_tput_2kb.toml  rpc_bench_tput_512kb.toml
benchmark/benchmark/rpc_bench_latency/: rpc_bench_latency_1024b.toml  rpc_bench_latency_128b.toml  rpc_bench_latency_256b.toml  rpc_bench_latency_512b.toml  rpc_bench_latency_64b.toml
benchmark/benchmark/rpc_bench_rate/: rpc_bench_tput_32b_1c.toml  rpc_bench_tput_32b_2c.toml  rpc_bench_tput_32b_4c.toml  rpc_bench_tput_32b_8c.toml
benchmark/benchmark/rpc_bench_tput/: rpc_bench_tput_128b.toml  rpc_bench_tput_128kb.toml  rpc_bench_tput_1mb.toml  rpc_bench_tput_2kb.toml  rpc_bench_tput_2mb.toml  rpc_bench_tput_32b.toml  rpc_bench_tput_32kb.toml  rpc_bench_tput_4kb.toml  rpc_bench_tput_512b.toml  rpc_bench_tput_512kb.toml  rpc_bench_tput_8kb.toml  rpc_bench_tput_8mb.toml
benchmark/benchmark/write_tput/: write_tput-32b-1c-1s-8q.toml  write_tput-32b-4c-1s-8q.toml  write_tput-32b-4c-4s-8q.toml  write_tput-32b-8c-8s-8q.toml  write_tput-32b-8p.toml  write_tput-32b.toml
benchmark/src/: line_reader.rs  main.rs  tee.rs
examples/alltoall/: Cargo.toml
examples/alltoall/src/: main.rs
examples/bench/: Cargo.toml
examples/bench/src/: bench_bw.rs  bench_lat.rs  lib.rs  read_bw.rs  read_lat.rs  send_bw.rs  send_lat.rs  util.rs  write_bw.rs  write_lat.rs
examples/hello/: Cargo.toml
examples/hello/src/: receiver.rs  sender.rs
experimental/mrpc/: .gitignore  Cargo.toml  Makefile.toml  README.md  compile_manually.sh  load-mrpc-plugins.toml  rust-toolchain
experimental/mrpc/cpp/: Cargo.toml  Makefile  build.rs
experimental/mrpc/cppbindgen/: Cargo.toml  Makefile  cbindgen.toml
experimental/mrpc/distbench/: Cargo.toml  Makefile
experimental/mrpc/distbenchcpp/: Cargo.toml  Makefile
experimental/mrpc/mrpc-build/: Cargo.toml
experimental/mrpc/mrpc-derive/: Cargo.toml
experimental/mrpc/mrpc-marshal/: Cargo.toml
experimental/mrpc/scripts/: deploy_plugins.sh
experimental/mrpc/src/: codegen.rs  lib.rs  macros.rs  rheap.rs  rref.rs  sched.rs  status.rs  timing.rs  wref.rs
src/engine/: Cargo.toml
src/engine/src/: lb.rs  lib.rs  manager.rs  runtime.rs
src/experimental/: CMakeLists.txt  Cargo.toml  koala.toml  receiver.cc  sender.cc  spsc_queue2.cc
src/experimental/examples/: .gitignore  Makefile  bench_atomicring_mpsc.rs  bench_bw.c  bench_bw.cc  bench_crossbeam_mpsc.rs  bench_crossbeam_mpsc_round_trip.rs  bench_flume_mpsc.rs  bench_flume_mpsc_round_trip.rs  bench_hashmap.rs  bench_lamport_spsc.cc  bench_lat.c  bench_lat.cc  bench_read_bw.h  bench_read_lat.h  bench_ringbuf_spsc.rs  bench_ringbuffer_spsc.rs  bench_ringbuffer_spsc_round_trip.rs  bench_send_bw.h  bench_send_lat.h  bench_shmem_ipc.rs  bench_shmem_ipc_sync.rs  bench_std_mpsc.rs  bench_timestamp  bench_timestamp.c  bench_timestamp.rs  bench_tokio_mpsc.rs  bench_tokio_mpsc_round_trip.rs  bench_util.h  bench_write_bw.h  bench_write_lat.h  benchmark.c  benchmark.rs  locate_symbol.rs  mini_salloc.rs  parse_config.rs  socket_poll.rs  test_dispatch_codegen.rs  test_domain_socket.rs
src/experimental/src/: aligned_alloc.rs  command.rs  engine.rs  engine_draft.rs  interface_draft.rs  ipc.rs  lib.rs  main.rs  mmap_aligned.rs  module.rs  regmr.rs  ringbuffer.rs  runtime.rs  shm.rs  shmalloc.rs
src/experimental/tests/: ringbuffer.rs
src/ffi/: Cargo.toml  Makefile  build.rs  expanded.rs
src/ffi/include/: increment.h  incrementerclient.h  receive.h
src/ffi/src/: client.cc  client.rs  clientcodegen.rs  codegen.rs  increment.cc  incrementasync.cc  incrementerclient.cc  main.cc  main.rs  server.cc  server.rs  servercodegen.rs
src/ipc/: Cargo.toml
src/ipc/core/: Cargo.toml
src/ipc/mrpc/: Cargo.toml
src/ipc/rpc_adapter/: Cargo.toml
src/ipc/salloc/: Cargo.toml
src/ipc/scheduler/: Cargo.toml
src/ipc/src/: buf.rs  cmd.rs  control.rs  customer.rs  dp.rs  ipc_channel.rs  lib.rs  mailbox.rs  queue.rs  service.rs  shm.rs  shmem_ipc.rs  unix.rs
src/ipc/tcp_rpc_adapter/: Cargo.toml
src/ipc/transport/: Cargo.toml
src/koala/: Cargo.toml
src/koala-mrpc/: Cargo.toml
src/koala-mrpc/src/: config.rs  engine.rs  lib.rs  message.rs  meta_pool.rs  module.rs
src/koala-salloc/: Cargo.toml
src/koala-salloc/src/: config.rs  engine.rs  lib.rs  module.rs  region.rs  state.rs
src/koala/src/: addon.rs  config.rs  control.rs  dependency.rs  envelop.rs  lib.rs  logging.rs  main.rs  module.rs  node.rs  page_padded.rs  plugin.rs  profiler.rs  resource.rs  resource2.rs  state_mgr.rs  storage.rs  timer.rs
src/koala_examples/: Cargo.toml
src/koala_examples/alltoall/: Cargo.toml
src/koala_examples/bench/: Cargo.toml
src/koala_examples/hello/: Cargo.toml
src/koalactl/: Cargo.toml
src/libkoala/: Cargo.toml
src/libphoenix/: Cargo.toml
src/mrpc/: Cargo.toml
src/mrpc-marshal/: Cargo.toml
src/phoenix/: Cargo.toml
src/phoenix-api/: Cargo.toml  README.md
src/phoenix-common-workspace/: Cargo.toml
src/phoenix_common/: Cargo.toml
src/phoenixctl/: Cargo.toml
src/phoenixd/: Cargo.toml
src/phoenixos/: Cargo.toml
src/rdma/: Cargo.toml  README.md  build.rs
src/shm/: Cargo.toml
(+1408 files in other folders)
