[workspace]
members = [
  "src/experimental",
  "src/interface",
  "src/mmap",
  "src/ipc",
  "src/ipc/core",
  "src/ipc/mrpc",
  "src/ipc/salloc",
  "src/ipc/transport",
  "src/ipc/rpc_adapter",
  "src/ipc/tcp_rpc_adapter",
  "src/ipc/policy/null",
  "src/ipc/policy/ratelimit",
  "src/ipc/policy/qos",
  "src/ipc/policy/hotel-acl",
  "src/shm",
  "src/shm/salloc",
  "src/phoenix",
  "src/phoenix-plugins/salloc",
  "src/phoenix-plugins/salloc/plugin",
  "src/phoenix-plugins/transport-rdma",
  "src/phoenix-plugins/transport-rdma/plugin",
  "src/phoenix-plugins/transport-tcp",
  "src/phoenix-plugins/transport-tcp/plugin",
  "src/phoenix-plugins/rpc_adapter",
  "src/phoenix-plugins/rpc_adapter/plugin",
  "src/phoenix-plugins/tcp_rpc_adapter",
  "src/phoenix-plugins/tcp_rpc_adapter/plugin",
  "src/phoenix-plugins/mrpc",
  "src/phoenix-plugins/mrpc/plugin",
  "src/phoenix-plugins/policy/null",
  "src/phoenix-plugins/policy/null/plugin",
  "src/phoenix-plugins/policy/ratelimit",
  "src/phoenix-plugins/policy/ratelimit/plugin",
  "src/phoenix-plugins/policy/qos",
  "src/phoenix-plugins/policy/qos/plugin",
  "src/phoenix-plugins/policy/hotel-acl",
  "src/phoenix-plugins/policy/hotel-acl/plugin",
  "src/phoenixctl",
  "src/mrpc-derive",
  "src/mrpc-marshal",
  "src/rdma",
  "src/utils",
  "src/libphoenix",
  "src/mrpc",
  "src/mrpc/mrpc-build",
  "src/phoenix_examples/hello",
  "src/phoenix_examples/send_bw",
  "src/phoenix_examples/send_lat",
  "src/phoenix_examples/bench",
  "src/phoenix_examples/alltoall",
  "src/phoenix_examples/rpc_hello",
  "src/phoenix_examples/rpc_bench",
  "src/phoenix_examples/rpc_bench_plus",
  "src/phoenix_examples/masstree_analytics",
  "src/phoenix_examples/hotel_reservation",
  # "src/phoenix_examples/hotel_microservices",
  "src/phoenixctl",
  "benchmark",
]
exclude = [
  "src/3rdparty/prost",
  "src/phoenix-python"
]
resolver = "2"

[profile.release]
debug = true
