[workspace]
members = [
  "src/experimental",
  # the API for user app
  "src/phoenix-api",
  "src/phoenix-api/salloc",
  "src/phoenix-api/transport",
  "src/mmap",
  "src/rdma",
  "src/utils",
  "src/ipc",
  # shared memory data types
  "src/shm",
  "src/shm/shmalloc",
  # the API, traits, types for plugin dev
  "src/phoenix_common",
  # a crate to inject dependencies to phoenix_common
  "src/phoenix-common-workspace",
  # plugins
  "src/plugin/salloc",
  "src/plugin/transport-rdma",
  "src/plugin/transport-tcp",
  # the products
  "src/phoenixos",
  "src/phoenixctl",
  "src/phoenix-syscalls",
  "benchmark",
  # examples
  "examples/hello",
  "examples/send_bw",
  "examples/send_lat",
  "examples/bench",
  "examples/alltoall",
  # tools
  "tools/phoenix_cargo",
]
exclude = [
  "experimental/mrpc",
]

resolver = "2"

[workspace.dependencies]
phoenix-api = { path = "src/phoenix-api" }
mmap = { path = "src/mmap" }
rdma = { path = "src/rdma" }
utils = { path = "src/utils" }
shm = { path = "src/shm" }
ipc = { path = "src/ipc" }
slabmalloc = { path = "src/slabmalloc" }
phoenix-syscalls = { path = "src/phoenix-syscalls" }
shmalloc = { path = "src/shm/shmalloc" }
phoenix_common = { path = "src/phoenix_common" }
phoenix-common-workspace = { path = "src/phoenix-common-workspace" }

bitflags = "1.3.2"
libc = "0.2.103"
thiserror = "1.0.29"
static_assertions = "1.1.0"
nix = "0.25.0"
lazy_static = "1.4.0"
smol = "1.2.5"
memfd = "0.4.1"
memmap2 = "0.5.0"
spin = "0.9.3"
tracing = "0.1"
log = "0.4.14"
bincode = "1.3.3"
clap = "4.0.29"
object = "0.30.1"
rustc-demangle = "0.1.21"
page_size = "0.4.2"

ipc-channel = { git = "https://github.com/phoenix-dataplane/ipc-channel.git", version = "0.16.0", branch = "phoenix-patch" }
serde = "1.0.130"
serde_derive = "1.0.130"
shmem-ipc = "0.2.0"
zerocopy = "0.3.0"
uuid = "0.8.2"
atomic-traits = "0.3.0"
crossbeam = "0.8.2"
unique = "0.9.1"
minstant = "0.1.1"
# since mio 0.8.5, the timeout for poll will be rounded up to 1 ms.
mio = "0.8.5"
async-io = "1.9.0"
futures = "0.3.21"
futures-core = "0.3.21"
tokio = "1.18.2"
memoffset = "0.6.5"
socket2 = "0.4.7"

chrono = "0.4.19"
ansi_term = "0.12.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
tracing-chrome = "0.6"
tracing-core = "0.1"
anyhow = "1.0.58"
num_cpus = "1.13.0"
fnv = "1.0.7"
toml = "0.5.8"
version = "3.0.0"
scheduler = "0.1.3"
dashmap = "5.3.4"
smallvec = "1.8.0"
json = "0.12.4"
itertools = "0.10.3"
libloading = "0.7.3"
petgraph = "0.6.2"
semver = "1.0.12"
crc32fast = "1.3.2"
sharded-slab = "0.1.4"
libnuma = "0.0.4"
libnuma-sys = "0.0.4"
serde_json = "1.0.81"
prettytable-rs = "0.9"

bindgen = "0.69.4"
cc = "1.0.70"

[profile.release]
debug = true
