[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.17"
nix = "0.24.1"
serde = { version = "1.0.137", features = ["derive"] }
structopt = "0.3.26"
toml = "0.5.9"

[[bin]]
name = "launcher"
path = "src/main.rs"