[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.57"
bytes = "1.1.0"
chrono = "0.4.19"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
nix = { version = "0.24.1", default-features = false, features = ["signal"] }
serde = { version = "1.0.137", features = ["derive"] }
shellexpand = "2.1.0"
structopt = "0.3.26"
tokio-anyfd = "0.2.0"
toml = "0.5.9"
walkdir = "2.3.2"

[[bin]]
name = "launcher"
path = "src/main.rs"
