[package]
name = "alltoall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phoenix-syscalls.workspace = true
clap = { workspace = true, features = ["derive"] }
anyhow.workspace = true
arg_enum_proc_macro = "0.3.2"
