[package]
name = "mrpc"
version = "0.1.0"
edition = "2021"

[features]
timing = [
    "dep:minstant",
]

[dependencies.phoenix-api-mrpc]
workspace = true

[dependencies.phoenix-api]
workspace = true
features = [
    "mrpc",
]

[dependencies.ipc]
workspace = true
features = [
    "customer",
]

[dependencies.shm]
workspace = true
features = [
    "mrpc",
]

[dependencies.mmap]
workspace = true

[dependencies.phoenix-syscalls]
workspace = true

[dependencies.shmalloc]
workspace = true

[dependencies.minstant]
workspace = true
optional = true

[dependencies.thiserror]
workspace = true

[dependencies.uuid]
workspace = true

[dependencies.libc]
workspace = true

[dependencies.fnv]
workspace = true

[dependencies.memfd]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.tracing]
workspace = true

[dependencies.dashmap]
workspace = true

[dependencies.async-executor]
workspace = true

[dependencies.arrayvec]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.log]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.libnuma]
workspace = true

[dependencies.slab]
workspace = true

[dependencies.spin]
workspace = true

[workspace]
members = [
    "mrpc-build",
    "mrpc-derive",
    "mrpc-marshal",
    "phoenix-api/mrpc",
    "phoenix-api/mrpclb",
    "phoenix-api/rpc_adapter",
    "phoenix-api/tcp_rpc_adapter",
    "phoenix-api/load_balancer",
    "phoenix-api/policy/null",
    "phoenix-api/policy/ratelimit",
    "phoenix-api/policy/ratelimit-drop",
    "phoenix-api/policy/qos",
    "phoenix-api/policy/hotel-acl",
    "phoenix-api/policy/logging",
    "phoenix-api/policy/hello-acl-receiver",
    "phoenix-api/policy/hello-acl-sender",
    "phoenix-api/policy/hello-acl",
    "phoenix-api/policy/nofile-logging",
    "phoenix-api/policy/fault",
    "phoenix-api/policy/fault2",
    "phoenix-api/policy/delay",
    "phoenix-api/policy/admission-control",
    "phoenix-api/policy/metrics",
    "phoenix-api/policy/mutation",
    "phoenix-api/policy/fault-server",
    "phoenix-api/policy/logging-server",
    "phoenix-api/policy/metrics-server",
    "phoenix-api/policy/mutation-server",
    "phoenix-api/policy/ratelimit-drop-server",
    "plugin/mrpc",
    "plugin/mrpclb",
    "plugin/rpc_adapter",
    "plugin/tcp_rpc_adapter",
    "plugin/load_balancer",
    "plugin/policy/null",
    "plugin/policy/ratelimit",
    "plugin/policy/ratelimit-drop",
    "plugin/policy/qos",
    "plugin/policy/logging",
    "plugin/policy/hotel-acl",
    "plugin/policy/hello-acl-receiver",
    "plugin/policy/hello-acl-sender",
    "plugin/policy/hello-acl",
    "plugin/policy/nofile-logging",
    "plugin/policy/fault",
    "plugin/policy/fault2",
    "plugin/policy/delay",
    "plugin/policy/admission-control",
    "plugin/policy/metrics",
    "plugin/policy/mutation",
    "plugin/policy/fault-server",
    "plugin/policy/logging-server",
    "plugin/policy/metrics-server",
    "plugin/policy/mutation-server",
    "plugin/policy/ratelimit-drop-server",
    "examples/rpc_echo",
    "examples/rpc_bench",
    "examples/rpc_bench_plus",
    "examples/masstree_analytics",
    "examples/hotel_reservation",
    "examples/load_balancer",
    "generated/api/genaclserver",
    "generated/plugin/genaclserver",
]
exclude = [
    "3rdparty/prost",
]

[workspace.dependencies]
thiserror = "1.0.31"
uuid = "0.8.2"
libc = "0.2.103"
nix = "0.25.0"
serde = "1.0.130"
serde_json = "1.0.85"
fnv = "1.0.7"
memfd = "0.4.1"
lazy_static = "1.4.0"
tracing = "0.1"
dashmap = "5.3.4"
async-executor = "1.4.1"
arrayvec = "0.7"
async-trait = "0.1.56"
log = "0.4.17"
minstant = "0.1.1"
futures = "0.3.23"
libnuma = "0.0.4"
spin = "0.9.3"
static_assertions = "1.1.0"
tokio = "1.18.2"
anyhow = "1.0.58"
itertools = "0.10.3"
crc32fast = "1.3.2"
fastrand = "1.8.0"
syn = "1.0.98"
quote = "1.0.20"
proc-macro2 = "1.0.40"
md5 = "0.7.0"
prettyplease = "0.1.15"
toml = "0.5.8"
libloading = "0.7.3"
bitvec = "1.0.1"
bincode = "1.3.3"
socket2 = "0.4.7"
slab = "0.4.7"
smol = "1.2.5"
structopt = "0.3.23"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
hdrhistogram = "7.5.0"
scheduler = "0.1.3"
cmake = "0.1.48"
chrono = "0.4.19"
env_logger = "0.9.0"
fasthash = "0.4.0"
link-cplusplus = "1.0"
arc-swap = "1.5.0"
crossbeam-utils = "0.8.12"
rand = "0.8"

[workspace.dependencies.mrpc]
path = "."

[workspace.dependencies.phoenix-api-mrpc]
path = "phoenix-api/mrpc"

[workspace.dependencies.phoenix-api-mrpclb]
path = "phoenix-api/mrpclb"

[workspace.dependencies.phoenix-api-tcp-rpc-adapter]
path = "phoenix-api/tcp_rpc_adapter"

[workspace.dependencies.phoenix-api-rpc-adapter]
path = "phoenix-api/rpc_adapter"

[workspace.dependencies.phoenix-api-load-balancer]
path = "phoenix-api/load_balancer"

[workspace.dependencies.phoenix-api-policy-null]
path = "phoenix-api/policy/null"

[workspace.dependencies.phoenix-api-policy-ratelimit]
path = "phoenix-api/policy/ratelimit"

[workspace.dependencies.phoenix-api-policy-ratelimit-drop]
path = "phoenix-api/policy/ratelimit-drop"

[workspace.dependencies.phoenix-api-policy-qos]
path = "phoenix-api/policy/qos"

[workspace.dependencies.phoenix-api-policy-hotel-acl]
path = "phoenix-api/policy/hotel-acl"

[workspace.dependencies.phoenix-api-policy-logging]
path = "phoenix-api/policy/logging"

[workspace.dependencies.phoenix-api-policy-hello-acl-receiver]
path = "phoenix-api/policy/hello-acl-receiver"

[workspace.dependencies.phoenix-api-policy-hello-acl-sender]
path = "phoenix-api/policy/hello-acl-sender"

[workspace.dependencies.phoenix-api-policy-hello-acl]
path = "phoenix-api/policy/hello-acl"

[workspace.dependencies.phoenix-api-policy-nofile-logging]
path = "phoenix-api/policy/nofile-logging"

[workspace.dependencies.phoenix-api-policy-fault]
path = "phoenix-api/policy/fault"

[workspace.dependencies.phoenix-api-policy-fault2]
path = "phoenix-api/policy/fault2"

[workspace.dependencies.phoenix-api-policy-delay]
path = "phoenix-api/policy/delay"

[workspace.dependencies.phoenix-api-policy-admission-control]
path = "phoenix-api/policy/admission-control"

[workspace.dependencies.phoenix-api-policy-metrics]
path = "phoenix-api/policy/metrics"

[workspace.dependencies.phoenix-api-policy-mutation]
path = "phoenix-api/policy/mutation"

[workspace.dependencies.phoenix-api-policy-fault-server]
path = "phoenix-api/policy/fault-server"

[workspace.dependencies.phoenix-api-policy-logging-server]
path = "phoenix-api/policy/logging-server"

[workspace.dependencies.phoenix-api-policy-metrics-server]
path = "phoenix-api/policy/metrics-server"

[workspace.dependencies.phoenix-api-policy-mutation-server]
path = "phoenix-api/policy/mutation-server"

[workspace.dependencies.phoenix-api-policy-ratelimit-drop-server]
path = "phoenix-api/policy/ratelimit-drop-server"

[workspace.dependencies.mrpc-build]
path = "mrpc-build"

[workspace.dependencies.mrpc-derive]
path = "mrpc-derive"

[workspace.dependencies.mrpc-marshal]
path = "mrpc-marshal"

[workspace.dependencies.prost]
path = "3rdparty/prost"

[workspace.dependencies.prost-build]
path = "3rdparty/prost/prost-build"

[workspace.dependencies.phoenix-mrpc]
path = "plugin/mrpc"

[workspace.dependencies.phoenix-mrpclb]
path = "plugin/mrpclb"

[workspace.dependencies.phoenix-syscalls]
path = "../../src/phoenix-syscalls"

[workspace.dependencies.phoenix-api]
path = "../../src/phoenix-api"

[workspace.dependencies.ipc]
path = "../../src/ipc"

[workspace.dependencies.mmap]
path = "../../src/mmap"

[workspace.dependencies.rdma]
path = "../../src/rdma"

[workspace.dependencies.shm]
path = "../../src/shm"

[workspace.dependencies.shmalloc]
path = "../../src/shm/shmalloc"

[workspace.dependencies.phoenix_common]
path = "../../src/phoenix_common"

[workspace.dependencies.transport-rdma]
path = "../../src/plugin/transport-rdma"
package = "phoenix-transport-rdma"

[workspace.dependencies.transport-tcp]
path = "../../src/plugin/transport-tcp"
package = "phoenix-transport-tcp"

[workspace.dependencies.phoenix-salloc]
path = "../../src/plugin/salloc"
package = "phoenix-salloc"

[workspace.dependencies.utils]
path = "../../src/utils"

[workspace.dependencies.phoenix-api-policy-genaclserver]
path = "generated/api/genaclserver"

[profile.release]
debug = true
