[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
log = "0.4.14"
crossbeam = "0.8.1"
spin = "0.9.2"
version = "3.0.0"
scheduler = "0.1.3"
num_cpus = "1.13.0"
interface = { path = "../interface" }