[package]
name = "experimental"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
crossbeam = "0.8.0"
libc = "0.2.88"
num_cpus = "1.13.0"
flume = "0.10.2"
atomicring = "1.2.7"
ringbuf = "0.2.3"
spin = "0.9.2"
nix = "0.23.0"
slabmalloc = "0.10.0"

[dev-dependencies]
rand = "0.8.3"

[[example]]
name = "bench_std_mpsc"
