[package]
name = "experimental"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
crossbeam = "0.8.0"
libc = "0.2.103"
num_cpus = "1.13.0"
flume = "0.10.2"
atomicring = "1.2.7"
ringbuf = "0.2.3"
spin = "0.9.2"
nix = "0.23.0"
slabmalloc = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.44"
ipc = { path = "../ipc" }
engine = { path = "../engine" }
interface = { path = "../interface" }
uuid = "0.8.2"
thiserror = "1.0.29"
shmem-ipc = "0.2.0"
chashmap = "2.2.2"
dashmap = "5.3.4"
fnv = "1.0.7"

[dev-dependencies]
rand = "0.8.3"
