[package]
name = "experimental"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phoenix-api.workspace = true
slabmalloc = { path = "../slabmalloc" }
phoenix-api-salloc = { git = "https://github.com/phoenix-dataplane/phoenix-api", tag = "v0.1.0"}
ipc = { path = "../ipc" }

structopt = "0.3.21"
crossbeam = "0.8.0"
libc = "0.2.103"
num_cpus = "1.13.0"
flume = "0.10.2"
atomicring = "1.2.7"
ringbuf = "0.2.3"
spin = "0.9.2"
nix = "0.23.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.44"
uuid = "0.8.2"
thiserror = "1.0.29"
shmem-ipc = "0.2.0"
chashmap = "2.2.2"
dashmap = "5.3.4"
fnv = "1.0.7"
toml = { version = "0.5.8", features = ["preserve_order"] }
petgraph = "0.6.0"
linked-hash-map = "0.5.4"
zerocopy = "0.3.0"
tokio = { version = "1.18.2", features = ["sync"] }
fastrand = "1.7.0"
cht = "0.5.0"
# sharded = { version = "0.2.1", features = ["parking_lot", "ahash"] }
flurry = "0.4.0"
contrie = "0.1.4"
memfd = "0.4.1"
socket2 = "0.4.7"
mio = {version="0.8.4", features = ["os-poll", "net"]}
sharded-slab = "0.1.4"
object = { version = "0.30.0", features = ["write"] }
rustc-demangle = "0.1.21"

[dev-dependencies]
rand = "0.8.3"
