[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "rpc_int_client"
path = "src/codegen.rs"

[[bin]]
name = "rpc_int_server"
path = "src/codegen.rs"

[dependencies]
cxx = "1.0"
interface = { path = "../interface" }
ipc = { path = "../ipc", features = ["mrpc"] }
mmap = { path = "../mmap" }
salloc = { path = "../shm/salloc" }
mrpc = { path = "../mrpc" }
memfd = "0.4.1"
libc = "0.2"
raw-parts = "1.1.2"
smol = "1.2.5"

[build-dependencies]
cxx-build = "1.0"
