[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipc-core = { path = "core" }
mrpc = { path = "mrpc", package = "ipc-mrpc", optional = true }
salloc = { path = "salloc", package = "ipc-salloc", optional = true }
transport = { path = "transport", package = "ipc-transport", optional = true }
ratelimit = { path = "policy/ratelimit", package = "ipc-ratelimit", optional = true }
rpc_adapter = { path = "rpc_adapter", package = "ipc-rpc_adapter", optional = true }
scheduler = { path = "scheduler", package = "ipc-scheduler", optional = true }
