[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
uapi.workspace = true

ipc-channel.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
bincode.workspace = true
libc.workspace = true
shmem-ipc.workspace = true
zerocopy.workspace = true
memfd.workspace = true
memmap2.workspace = true
uuid.workspace = true
atomic-traits.workspace = true
nix = { workspace = true, default-features = false, features = ["process"] }
crossbeam.workspace = true
unique.workspace = true
minstant.workspace = true
mio.workspace = true
async-io = { workspace = true, optional = true }

[features]
customer = ["dep:async-io"]
