[package]
name = "koala-salloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "dylib"]

[dependencies]
interface = { path = "../interface" }
ipc = { path = "../ipc" }
koala = { path = "../koala" }
mrpc-marshal = { path = "../mrpc-marshal" } 
memmap-fixed = { path = "../memmap-fixed" }
tracing = "0.1"
anyhow = "1.0.58"
lazy_static = "1.4.0"
nix = "0.23.0"
uuid = "0.8.2"
memfd = "0.4.1"
thiserror = "1.0.31"
spin = "0.9.3"
libc = "0.2.103"
futures = "0.3.21"
serde = { version = "1.0.130", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }