[package]
name = "koala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
ansi_term = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "ansi", "smallvec"] }
tracing-appender = "0.2"
tracing-chrome = "0.6"
anyhow = "1.0.44"
thiserror = "1.0.29"
crossbeam = "0.8.1"
uuid = "0.8.2"
num_cpus = "1.13.0"
nix = "0.23.0"
libc = "0.2.103"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
interface = { path = "../interface" }
ipc = { path = "../ipc" }
rdma = { path = "../rdma", features = ["koala"] }
memmap-fixed = { path = "../memmap-fixed" }
fnv = "1.0.7"
mio = { version = "0.7.13", features = ["os-poll", "os-ext"] }
lazy_static = "1.4.0"
memoffset = "0.6.5"
spin = "0.9.2"
structopt = "0.3.26"
toml = { version = "0.5.8", features = ["preserve_order"] }
version = "3.0.0"
scheduler = "0.1.3"
unique = "0.9.1"
memfd = "0.4.1"
memmap2 = "0.5.0"
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["sync"] }
tracing-core = "0.1.26"
dashmap = "5.3.4"
smallvec = "1.8.0"
