[package]
name = "koala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
interface = { path = "../interface" }
ipc = { path = "../ipc" }
prost-build = { path = "../3rdparty/prost/prost-build", features = ["mrpc-backend"] }
# minitrace = { path = "../../../minitrace-rust/minitrace" }

chrono = "0.4.19"
ansi_term = "0.12.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "ansi", "smallvec"] }
tracing-appender = "0.2"
tracing-chrome = "0.6"
anyhow = "1.0.58"
thiserror = "1.0.31"
crossbeam = "0.8.1"
uuid = "0.8.2"
num_cpus = "1.13.0"
nix = "0.23.0"
libc = "0.2.103"
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
fnv = "1.0.7"
lazy_static = "1.4.0"
spin = "0.9.3"
structopt = "0.3.26"
toml = { version = "0.5.8", features = ["preserve_order"] }
version = "3.0.0"
scheduler = "0.1.3"
memfd = "0.4.1"
memmap2 = "0.5.0"
futures = { version = "0.3.21", features = ["executor", "thread-pool"] }
tokio = { version = "1.18.2", features = ["sync"] }
dashmap = "5.3.4"
smallvec = "1.8.0"
json = "0.12.4"
minstant = "0.1.1"
static_assertions = "1.1.0"
itertools = "0.10.3"
libloading = "0.7.3"
petgraph = "0.6.2"
semver = "1.0.12"
crc32fast = "1.3.2"
socket2 = "0.4.4"
unique = "0.9.1"
