[package]
name = "koala_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libkoala = { path = "../libkoala" }
interface = { path = "../interface" }
dns-lookup = "1.0.8"
libc = "0.2.103"
structopt = "0.3.23"
anyhow = "1.0.44"
thiserror = "1.0.30"


[[bin]]
name = "bench_lat"
path = "src/bench_lat.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "send_bw"
path = "src/send_bw.rs"

[[bin]]
name = "send_lat"
path = "src/send_lat.rs"
