[package]
name = "koalactl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = "0.8.2"
bincode = "1.3.3"
structopt = "0.3.26"
serde = { version = "1.0.130", features = ["derive"] }
toml = { version = "0.5.8", features = ["preserve_order"] }
lazy_static = "1.4.0"
prettytable-rs = "0.9"

ipc = { path = "../ipc", features = ["ratelimit"] }
interface = { path = "../interface" }