[package]
name = "libkoala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
anyhow = "1.0.44"
uuid = "0.8.2"
ipc-channel = "0.15.0"
experimental = { path = "../experimental" }
ipc = { path = "../ipc" }
engine = { path = "../engine" }
interface = { path = "../interface" }
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.14"
dns-lookup = "1.0.8"

[features]
