[package]
name = "libkoala"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
anyhow = "1.0.44"
uuid = "0.8.2"
ipc-channel = "0.15.0"
ipc = { path = "../ipc" }
engine = { path = "../engine" }
interface = { path = "../interface" }
serde = { version = "1.0.130", features = ["derive"] }
bincode = "1.3.3"
log = "0.4.14"
ibverbs = "0.6.1"
dns-lookup = "1.0.8"
libc = "0.2.103"
nix = "0.23.0"
fnv = "1.0.7"
memfd = "0.4.1"
memmap2 = "0.5.0"
spin = "0.9.2"
lazy_static = "1.4.0"

[features]
