[package]
name = "libphoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }
ipc = { path = "../ipc", features = ["transport"] }
utils = { path = "../utils" }

thiserror = "1.0.29"
uuid = "0.8.2"
libc = "0.2.103"
nix = "0.23.0"
fnv = "1.0.7"
memfd = "0.4.1"
memmap2 = "0.5.0"
spin = "0.9.3"
lazy_static = "1.4.0"
serde_json = "1.0.85"

[features]
