[package]
name = "libphoenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# crate-type = ["dylib", "rlib"]

[dependencies]
phoenix-api = { workspace = true, features = ["transport"] }
ipc.workspace = true
utils.workspace = true

thiserror.workspace = true
uuid.workspace = true
libc.workspace = true
fnv.workspace = true
memfd.workspace = true
memmap2.workspace = true
spin.workspace = true
lazy_static.workspace = true
serde_json.workspace = true

[features]
